<resources>
    <string name="app_name">LN Address to Invoice</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="error_need_internet_to_load_username_info">Internet connection is needed to load username info</string>
    <string name="error_failed_to_load_username_info">Failed to load username info. The link must contain an email-like address</string>
    <string name="error_only_addresses_allowed">Only email-like addresses are allowed in this app</string>
    <string name="template_resolving_address">Resolving %1$s…</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter amount</string>
    <string name="sat">sat</string>
    <string name="template_error_you_cant_send_more_than">You can\'t send more than %1$s</string>
    <string name="template_error_you_cant_send_less_than">You can\'t send less than %1$s</string>
    <string name="pay_the_invoice">Pay the invoice</string>
    <string name="progress_creating_invoice">Creating invoice…</string>
    <string name="error_failed_to_create_invoice">Failed to create invoice</string>
    <string name="use_your_wallet_to_pay_the_invoice">Use your wallet to pay the invoice</string>
    <string name="tip_suggestion">I hope you like the app!\nPlease, consider a tip for the author</string>
    <string name="tip_the_author">Tip the author</string>
    <string name="bottom_label">LN Address to Invoice. Support &#128150;</string>
    <string name="copy_invoice_to_clipboard">Copy the invoice to clipboard</string>
    <string name="used_open_source_software">Used open-source software</string>
    <string name="source_code">Source code</string>
    <string name="send_sats">Send sats</string>
    <string name="intro_start">Welcome. Please, let me quickly explain this app to you.\n\nLN Address to Invoice
        allows paying to email-like Lightning addresses from unsupported wallets.
        This utility is launched when you interact with addresses in your browser or other apps.
        Here\'s how it is done.
    </string>
    <string name="intro_clicking_address">Clicking an address</string>
    <string name="intro_clicking_address_details">Sometimes, a Lightning address is a clickable link, just like an email.
        When you click it, LN Address to Invoice appears.
        In the following profile card, try clicking the address:
    </string>
    <string name="intro_selecting_address">Selecting an address</string>
    <string name="intro_selecting_address_details">Often a Lightning address is just a text.
        In this case, select it and in the appeared system menu look for the <b>Send sats</b> action.
        In the following comment, try selecting the address and use the app action:
    </string>
    <string name="template_intro_clicking_address_address" translatable="false">
        <![CDATA[
        &#9889; <a href="lightning:%1$s">%1$s</a>
        ]]>
    </string>
    <string name="intro_selecting_address_comment_title">In reply to: Tony</string>
    <string name="template_intro_selecting_address_comment" translatable="false">Setting up an address under your domain is easy,
        see LUD-16. For example, mine is %1$s and it\'s an Alby alias
    </string>
    <string name="intro_clicking_address_website" translatable="false">&#127968; radiokot.com.ua</string>
    <string name="intro_clicking_address_npub" translatable="false">npub12358n500vfnf9j522nueg05k9yvhh97936smfgat6mledzegp5yskzrjdj</string>
    <string name="intro_clicking_address_name" translatable="false">Oleg K</string>
    <string name="got_it">Got it</string>
    <string name="paste_address">Paste address</string>
    <string name="intro_pasting_address">Copy-pasting an address</string>
    <string name="intro_pasting_address_details">If you see a Lightning address which is
        neither clickable nor selectable, or the presenting app doesn\'t support selection actions,
        just copy the address from there and paste into
        LN Address to Invoice with the Paste button in the header of this screen,
        or with the <b>Paste address</b> launcher icon shortcut.
    </string>
    <string name="error_clipboard_has_no_text">There\'s no copied text</string>
</resources>
