<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="vertical"
        android:requiresFadingEdge="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/intro_start"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/intro_clicking_address"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/intro_clicking_address_details"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/avatar_image_view"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:scaleType="centerInside"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
                        app:srcCompat="@drawable/oleg" />

                    <TextView
                        android:id="@+id/name_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/intro_clicking_address_name"
                        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/avatar_image_view"
                        app:layout_constraintTop_toTopOf="@id/avatar_image_view" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:ellipsize="middle"
                        android:singleLine="true"
                        android:text="@string/intro_clicking_address_npub"
                        app:layout_constraintEnd_toEndOf="@id/name_text_view"
                        app:layout_constraintStart_toStartOf="@id/name_text_view"
                        app:layout_constraintTop_toBottomOf="@id/name_text_view" />

                    <TextView
                        android:id="@+id/address_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        app:layout_constraintTop_toBottomOf="@id/avatar_image_view"
                        tools:text="⚡ oleg@radiokot.com.ua" />

                    <TextView
                        android:id="@+id/website_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:autoLink="web"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/intro_clicking_address_website"
                        app:layout_constraintTop_toBottomOf="@id/address_text_view" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/intro_selecting_address"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/intro_selecting_address_details"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/intro_selecting_address_comment_title"
                        android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

                    <TextView
                        android:id="@+id/comment_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textIsSelectable="true"
                        tools:text="@string/template_intro_selecting_address_comment" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/got_it_button"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/got_it" />

            <Space
                android:layout_width="0dp"
                android:layout_height="24dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
