<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    tools:context=".view.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/main_card_view"
        style="?materialCardViewFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        app:cardBackgroundColor="?colorSurface"
        app:cardCornerRadius="24dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="0dp"
                android:layout_height="16dp" />

            <LinearLayout
                android:id="@+id/loading_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/loading_animation_view"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:lottie_autoPlay="false"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/lottie_lightning"
                    app:lottie_speed="0.75" />

                <TextView
                    android:id="@+id/loading_progress_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    tools:text="Resolving address" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/invoice_creation_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    tools:text="Pay to oleg@radiokot.com.ua" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/amount_text_input_layout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:hint="@string/amount"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@null"
                    app:placeholderText="@string/enter_amount"
                    app:suffixText="@string/sat">

                    <!-- errorEnabled is important, otherwise
                    the height may be messed up once the error is shown
                    when the window is in the floating mode.
                    The space is compensated programmatically. -->

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/amount_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:imeOptions="actionSend"
                        android:inputType="number"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/quick_amounts_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-12dp"
                    android:orientation="horizontal">

                    <!-- The top margin is set programmatically. -->

                    <com.google.android.material.button.MaterialButton
                        style="@style/QuickAmountButton"
                        android:layout_marginStart="0dp"
                        tools:text="200" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/QuickAmountButton"
                        tools:text="500" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/QuickAmountButton"
                        tools:text="1 000" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/copy_check_box"
                    android:checked="true"
                    style="@style/Widget.Material3.CompoundButton.CheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-6dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/copy_invoice_to_clipboard" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tip_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/tip_suggestion"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/bottom_label_text_view"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="24dp"
                android:text="@string/bottom_label" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/primary_button"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/main_card_view"
        app:layout_constraintTop_toBottomOf="@id/main_card_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/primary_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pay_the_invoice"
        app:backgroundTint="?attr/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@id/main_card_view"
        app:layout_constraintStart_toEndOf="@id/cancel_button"
        app:layout_constraintTop_toBottomOf="@id/main_card_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
